--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="MuiBox-root css-o9hh3a"></div>
 
 
-                        <div class="MuiBox-root css-o9hh3a"></div><button class="connectButton MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1cwyrtz" tabindex="-1" type="button" disabled="" style="
+                        <div class="MuiBox-root css-o9hh3a"></div><button class="connectButton MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1cwyrtz" tabindex="-1" type="button" style="
     color: #225ee1;
     background-color: #225ee1;
 "><span class="MuiTypography-root MuiTypography-button css-1uyi7j6" style="line-height: 120%;">Connect</span></button>
